# finops-mcp

./: .gitignore  LICENSE  README.md  finops_scheduler.py  pyproject.toml
finops_mcp/: __init__.py  bootstrap.py  gitops.py  mapper.py  patcher.py  runlog.py  scheduling.py  server.py  telemetry.py  verify.py
sample-infra/: .gitignore  ec2.tf  ecs.tf  lambda.tf  main.tf  terraform.tfvars  variables.tf
sample-infra/helm/payments-api/: values.yaml
