[project]
name = "finops-mcp"
version = "0.4.2"
description = "MCP server for automated infrastructure cost optimization: ingests Compute Optimizer recommendations, maps them to Terraform/OpenTofu code, and drafts rightsizing PRs."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "boto3>=1.34.0",
    "python-hcl2>=4.3.0",
    "PyYAML>=6.0",
]

[project.scripts]
finops-mcp = "finops_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["finops_mcp*"]
